more changes to styles for hw4

--- a/index.html
+++ b/index.html
@@ -24,16 +24,78 @@
              border-left: 1px white solid;
            }            
         }
-        p.lead {
-          padding-top: 15px;
+        /* Landscape phones and down */
+        @media (max-width: 480px) {
+           .copy {
+              padding: 2.5% 10%;
+           }
+           .linediv-l {
+              border-bottom: 1px white solid;
+           }
+           .linediv-r {
+              border-top: 1px white solid;
+           }
+         }
+
+         /* All form factors */
+
+         /* Main body and headings */
+         body {
+             font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+         }
+         .heading, .subheading {
+            font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+            text-align: center;
+         }
+         p.lead {
+           padding-top: 1.5%;
+            font-size: 24px;
+           line-height: 30px;
         }
-        .navigation, .pitch, .section1, .section2, .faq, .footer {
-          padding: 10px 0px 10px 0px;
+        p {
+          font-size: 18px;
+          line-height: 24px;
+          }
+        /* Video pitch and Action */
+        .pitch {
+           padding: 2.5% 0%;
+          }
+        .order {
+           padding: 2% 0%;
+          }
+         .actions {
+            background-color: #343434;
+            padding: 3% 0%;
+         }   
+         .video, .thermometer, .order, .social, .statistics {
+            text-align: center;
         }
-        .video, .thermometer, .order, .social {
-          border: 1px dotted;
+        .statistics h3, .statistics p{
+          color: white;
+        }
+
+        /* Marketing Copy and Footer */
+       .copy {
+          padding-top: 2.5%;
+          padding-bottom: 2.5%;
+          text-align: justify;
+       }
+      .asset {
+         padding: 2.5% 0%;
+       }
+       .footer {
+          color: #cccccc;
           text-align: center;
-        }
+       }
+       .footer p {
+          font-size: 11px;
+       }
+       .footer a {
+          color: #ccccff;
+       }
+    </styles>
+  </head>
+
         .video {
           /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
           height: 124px;
