--- a/index.html
+++ b/index.html
@@ -96,80 +96,155 @@
     </styles>
   </head>
 
-        .video {
-          /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-          height: 124px;
-          line-height: 124px;
-        }
-        .thermometer, .order, .social {
-          /* line-height to vertically cetner: http://phrogz.net/css/vertical-align/index.htm */
-          height: 40px;
-          line-height: 40px;
-        }
-        div.row {
-          border: 1px solid;
-        }
-       </style>
-   </head>
-   <body>
-       <div class="container">
-          <div class="row navigation">
-            <div class="span2 logo">
-              Logo
+    <!-- Mobile-friendly navbar adapted from example. -->
+    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+       <div class="navbar-inner">
+          <div class="container">
+             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+             </button>
+             <a class="brand" href="#">Goodwill Capitalism</a>
+             <div class="nav-collapse collapse">
+               <ul class="nav">
+                 <li class="active"><a href="#">Home</a></li>
+                 <li><a href="#about">About</a></li>
+                 <li><a href="#contact">Contact</a></li>
+               </ul>
+              </div><!--/.nav-collapse -->
             </div>
-            <div class="span6 blank">
-              Blank 
-            </div>
-            <div class="span4 about">
-              About
-            </div>
-           </div>
-           <div class="row heading">
-              <div class="span12">
-                <h1>Bitstarter Title</h1>
-              </div>
-           </div>
-           <div class="row subheading">
-             <div class="span12">
-               <p class="lead">Amazing things will happen from here on</p>
-             </div>
-           </div>
-           <div class="row pitch">
-             <div class="span6 video">
-                Video
-             </div>
-             <div class="span6">
-                <div class="thermometer">
-                   Thermometer
+          </div>
+        </div>
+
+     <!-- We use row-fluid inside containers to achieve a resizable layout -->
+     <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+     <!-- http://stackoverflow.com/a/12270322 -->
+     <div class="container">
+       <!-- Font and paired font of .heading/.subheadin and body from Google Fonts -->
+       <!-- www.google.com/fonts/specimen/Ubuntu -->
+       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+       <div class="row-fluid heading">
+         <div class="span12">
+           <h1>Product</h1>
+         </div>
+       </div>
+       <div class="row-fluid subheading">
+         <div class="span12">
+           <!-- Special typography from Bootstrap for lead paragraph -->
+           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+           <p class="lead">One sentence description.</p>
+         </div>
+       </div>
+       <div class="row-fluid pitch">
+          <div class="span5 offset1 video">
+             <img class="img-poloroid" src="http://placehold.it/480x300">
+          </div>
+
+          <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
+          <div class="span5 actions">
+             <div class="span8 offset2">
+                 <div class="Statistics">
+                    <div class="span4">
+                       <!-- linediv-l and linediv-r give dividing lines that look different in
+                       horizontal and vertical layouts, illustrating media queries -->
+                       <div class="linediv-l">
+                       <h3>1000</h3> <p>backers</p>
+                       </div>
+                    </div>
+                    <div class="span4">
+                         <div class="linediv-c">
+                            <h3>$6000</h3> <p>of $10,000</p>
+                         </div>
+                    </div>
+                    <div class="span4">
+                         <div class="linediv-r">
+                            <h3>10</h3> <p>days left</p>
+                         </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="order">
-                   Order
+                <div class="span10 offset1">
+                   <!-- Bootstrap progress bar -->
+                   <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+                   <div class="thermometer progress active">
+                      <div class="bar bar-success" style="width: 60%;"></div>
+                      <div class="bar bar-warning" style="width: 40%;"></div>
+                   </div>
                 </div>
-                <div class="social">
-                   Social
+                <div class="span6 offset3 order">
+                  <!-- Standard Bootstrap button -->
+                  <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+                  <button class="btn btn-success btn-large">Preorder</button>
+                </div>
+                <div class="span8 offset2 social">
+                   <!-- Social buttons are not included in default bootstrap -->
+                   <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+                   <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter </button>
+                   <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook </button>
                 </div>
               </div>
             </div>
-            <div class="row section1">
-              <div class="span12">
-                 Marketing Section 1
-              </div>
-            </div>
-            <div class="row section2">
-              <div class="span12">
-                 Marketing Section 2
-              </div>
-            </div>
-            <div class="row faq">
-              <div class="span12">
-                 FAQ
-              </div>
-            </div>
-            <div class="row footer">
-              <div class="span12">
-                 Footer
+
+     <!-- Beyond this part the marketing copy begins -->
+     <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+     <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+     <!-- http://placehold.it -->
+     <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-poloroid" src="http://placehold.it/480x300">
+        </div>
+        <div class="span5 copy">
+          <p>
+             Add the section for Goodwill Capitalism here...
+          </p>
+        </div>
+     </div>
+
+     <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+          <p>
+             Add the section for Goodwill Capitalism here...
+          </p>
+        </div>
+        <div class="span5 asset">
+           <img class="img-poloroid" src="http://placehold.it/480x300">
+        </div>
+     </div>
+     
+     <!-- For the FAQ, we introduce a little bit of JS, using the accordion -->
+     <!-- This brings in jquery.js and bootstrap.js as dependencies -->
+     <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
+     <div class="row-fluid faq">
+       <div class="span10 offset1">
+         <h3>FAQ</h3>
+         <div class="accordion" id="accordion2">
+            <div class="accordion-group">
+               <div class="accordion-heading">
+                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                    What does FAQ stand for?
+                 </a>
+               </div>
+               <div id="collapseTwo" class="accordion-body collapse">
+                 <div class="accordion-inner">
+                    A question which is commonly asked by users
+                 </div>
+               </div>
               </div>
             </div>
           </div>
+       </div>
+
+       <!-- Not crucial, but we put this under a CC By-SA 3.0 license -->
+       <!-- http://creativecommons.org/licenses/ -->
+       <div class="row-fluid footer">
+          <div class="span12">
+            <p> This work is licensed under
+                the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the crud that would otherwise be put at the bottom of the page>/p>
+       </div>
+      </div>
+    </div>
    </body>
-</html>
+ </html>
+      
