added body tag to fix blank page error

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
        }
     </styles>
   </head>
-
+  <body>
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
