--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
          .video, .thermometer, .order, .social, .statistics {
             text-align: center;
         }
-        .statistics h3, .statistics p{
+        .statistics h3, .statistics p {
           color: white;
         }
 
@@ -127,14 +127,14 @@
        <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
        <div class="row-fluid heading">
          <div class="span12">
-           <h1>Product</h1>
+           <h1>GeeCee Exchange</h1>
          </div>
        </div>
        <div class="row-fluid subheading">
          <div class="span12">
            <!-- Special typography from Bootstrap for lead paragraph -->
            <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-           <p class="lead">One sentence description.</p>
+           <p class="lead">Something very amazing is about to happen here..</p>
          </div>
        </div>
        <div class="row-fluid pitch">
