statistics was capitalized - fixed

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
           <div class="span5 actions">
              <div class="span8 offset2">
-                 <div class="Statistics">
+                 <div class="statistics">
                     <div class="span4">
                        <!-- linediv-l and linediv-r give dividing lines that look different in
                        horizontal and vertical layouts, illustrating media queries -->
