updated with marketing content

--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
        <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
        <div class="row-fluid heading">
          <div class="span12">
-           <h1>GeeCee Exchange</h1>
+           <h1>Social Currency Exchange</h1>
          </div>
        </div>
        <div class="row-fluid subheading">
          <div class="span12">
            <!-- Special typography from Bootstrap for lead paragraph -->
            <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-           <p class="lead">Something very amazing is about to happen here..</p>
+           <p class="lead">Shore up your social capital. Share it with everyone</p>
          </div>
        </div>
        <div class="row-fluid pitch">
@@ -150,17 +150,17 @@
                        <!-- linediv-l and linediv-r give dividing lines that look different in
                        horizontal and vertical layouts, illustrating media queries -->
                        <div class="linediv-l">
-                       <h3>1000</h3> <p>backers</p>
+                       <h3>0</h3> <p>backers</p>
                        </div>
                     </div>
                     <div class="span4">
                          <div class="linediv-c">
-                            <h3>$6000</h3> <p>of $10,000</p>
+                            <h3>$0</h3> <p>of $100,000</p>
                          </div>
                     </div>
                     <div class="span4">
                          <div class="linediv-r">
-                            <h3>10</h3> <p>days left</p>
+                            <h3>60</h3> <p>days left</p>
                          </div>
                     </div>
                   </div>
@@ -197,7 +197,7 @@
         </div>
         <div class="span5 copy">
           <p>
-             Add the section for Goodwill Capitalism here...
+             Goodwill Capitalsim is a new economic experiment designed to leverage the latest advances in technology and cultural trends to upgrade Capitalism into a truly open and free system that will bring hope and opportunity to everyone. Goodwill Capitalism introduces a new social currency, called GeeCees (Goodwill Currency) which in combination with money will provide the perfect market mechanisms to minimize the social impact of economic crises. You can find more about it by looking it up on the web on my blog site.   
           </p>
         </div>
      </div>
@@ -205,11 +205,11 @@
      <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-             Add the section for Goodwill Capitalism here...
+             In order to do a proof of concept we will try to simulate market behaviors in a GeeCee economy, by implementing a social currency exchange system in which the users can use an app or browser based system to earn or borrow social currency and share it with other users. They can also award GeeCees to each other - simulating exchange of goods and services and favors and mock a traditional commercial transaction. The system will enforce certain rules and regulations that will then become the guiding framework for the real system. We will use the results and feedback from this trial to determine the next steps w.r.t further development of the concept and generating an awarness campaign.
           </p>
         </div>
         <div class="span5 asset">
-           <img class="img-poloroid" src="http://placehold.it/480x300">
+           <img class="img-poloroid" src="http://farm6.staticflickr.com/5508/9412294172_7db0eb474f.jpg">
         </div>
      </div>
      
@@ -223,22 +223,21 @@
             <div class="accordion-group">
                <div class="accordion-heading">
                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    Is Goodwill Capitalism a real system?
                  </a>
                </div>
                <div id="collapseOne" class="accordion-body collapse">
                  <div class="accordion-inner">
-                    Frequently Asked Questions
-               </div>
+                    No. It is still in experimental and theortical stage. This is a mock trial to see how it is accepted by general public               </div>
                </div>
                <div class="accordion-heading">
                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                    What is a frequently asked question?
+                    What will this trial proove?
                  </a>
                </div>
                <div id="collapseTwo" class="accordion-body collapse">
                  <div class="accordion-inner">
-                    A question which is commonly asked by users
+                    Goodwill Capitalism is all about changing market behaviors. This trail will test one such behavior, among many others. Namely, How do people respond when their social values and civic behavior and productivity in the marketplace are appreciated and monetized.
                  </div>
                </div>
               </div>
