--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
        </div>
        <div class="row-fluid pitch">
           <div class="span5 offset1 video">
-             <img class="img-poloroid" src="http://placehold.it/480x300">
+             <img class="img-poloroid" src="http://farm8.staticflickr.com/7435/9413564550_1d920dfde0.jpg">
           </div>
 
           <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -193,7 +193,7 @@
      <!-- http://placehold.it -->
      <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-poloroid" src="http://placehold.it/480x300">
+          <img class="img-poloroid" src="http://2.bp.blogspot.com/_OQv489hyWgM/TGNPZ7txcjI/AAAAAAAABfg/DlfXnUCRADk/s640/Implementing+GeeCees+v1.0.jpg">
         </div>
         <div class="span5 copy">
           <p>
