added placeholder image

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           </p>
         </div>
         <div class="span5 asset">
-           <img class="img-poloroid" src="http://farm6.staticflickr.com/5508/9412294172_7db0eb474f.jpg">
+           <img class="img-poloroid" src="http://placehold.it/480x300">
         </div>
      </div>
      
