added placeholder image

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
        <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
        <div class="row-fluid heading">
          <div class="span12">
-           <h1>Social Currency Exchange</h1>
+           <h1>A Social Currency Exchange</h1>
          </div>
        </div>
        <div class="row-fluid subheading">
