--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
       .footer a {
         color: #ccccff;
       }
+      /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+      div.addthis_toolbox {
+       width:180px;
+       margin: 0 auto;
+      }
     </style>
   </head>
     <!-- Mobile-friendly navbar adapted from example. -->
@@ -277,13 +282,17 @@
                   <button class="btn btn-success btn-large">Preorder</button>
                 </div>
                 <div class="span8 offset2 social">
-                   <!-- Social buttons are not included in default bootstrap -->
-                   <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-                   <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter </button>
-                   <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook </button>
-                </div>
-              </div>
-            </div>
+                    <!-- AddThis Button BEGIN -->
+                    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                       <a class="addthis_button_preferred_1"></a>
+                       <a class="addthis_button_preferred_2"></a>
+                       <a class="addthis_button_compact"></a>
+                       <a class="addthis_counter addthis_bubble_style"></a>
+                    </div>
+                     <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5203141b4bc2f3d0"></script>
+                     <!-- AddThis Button END -->
+         </div>
 
      <!-- Beyond this part the marketing copy begins -->
      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
