Added Bitcoin Button

--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
                 <div class="span6 offset3 order">
                   <!-- Standard Bootstrap button -->
                   <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                  <button class="btn btn-success btn-large">Preorder</button>
+<a class="coinbase-button" data-code="3b277af31de0fcdd0ae992f5e16643d4" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/3b277af31de0fcdd0ae992f5e16643d4">Preorder With Bitcoin</a>
+<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+                  <!--       <button class="btn btn-success btn-large">Preorder</button> -->
                 </div>
                 <div class="span8 offset2 social">
                     <!-- AddThis Button BEGIN -->
