added comment to force commit

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
 </script>
   </head>
+    <!-- a comment to force a commit -->
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
