--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
 </script>
   </head>
+  <body>
     <!-- a comment to force a commit -->
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
@@ -163,7 +164,8 @@
        </div>
        <div class="row-fluid pitch">
           <div class="span5 offset1 video">
-             <img class="img-poloroid" src="http://farm8.staticflickr.com/7435/9413564550_1d920dfde0.jpg">
+              <img class="img-poloroid" src="http://farm8.staticflickr.com/7435/9413564550_1d920dfde0.jpg"> 
+            <!-- <img class="img-polaroid" src="http://placehold.it/480x300">  -->
           </div>
 
           <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -227,8 +229,11 @@
      <!-- http://placehold.it -->
      <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-poloroid" src="http://2.bp.blogspot.com/_OQv489hyWgM/TGNPZ7txcjI/AAAAAAAABfg/DlfXnUCRADk/s640/Implementing+GeeCees+v1.0.jpg">
-        </div>
+            <div class="video-container">
+          <!-- <img class="img-poloroid" src="http://2.bp.blogspot.com/_OQv489hyWgM/TGNPZ7txcjI/AAAAAAAABfg/DlfXnUCRADk/s640/Implementing+GeeCees+v1.0.jpg"> -->
+          <iframe width="480" height="270" src="//www.youtube.com/embed/nRQ-t_htskA" frameborder="0" allowfullscreen></iframe>
+         </div> 
+       </div>
         <div class="span5 copy">
           <p>
              Goodwill Capitalsim is a new economic experiment designed to leverage the latest advances in technology and cultural trends to upgrade Capitalism into a truly open and free system that will bring hope and opportunity to everyone. Goodwill Capitalism introduces a new social currency, called GeeCees (Goodwill Currency) which in combination with money will provide the perfect market mechanisms to minimize the social impact of economic crises. You can find more about it by looking it up on the web on my blog site.   
@@ -243,7 +248,10 @@
           </p>
         </div>
         <div class="span5 asset">
-           <img class="img-poloroid" src="http://placehold.it/480x300">
+           <div class="video-container">
+          <!-- <img class="img-poloroid" src="http://placehold.it/480x300"> -->
+          <iframe width="480" height="270" src="//www.youtube.com/embed/9O0YtCCWZiU" frameborder="0" allowfullscreen></iframe>
+         </div>
         </div>
      </div>
      
@@ -262,7 +270,8 @@
                </div>
                <div id="collapseOne" class="accordion-body collapse">
                  <div class="accordion-inner">
-                    No. It is still in experimental and theortical stage. This is a mock trial to see how it is accepted by general public               </div>
+                    No. It is still in experimental and theortical stage. This is a mock trial to see how it is accepted by general public 
+              </div>
                </div>
                <div class="accordion-heading">
                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
