fixed format issues, added videos

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 
           <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
           <div class="span5 actions">
+              <div class="row-fluid">
              <div class="span8 offset2">
                  <div class="statistics">
                     <div class="span4">
@@ -181,7 +182,7 @@
                     </div>
                     <div class="span4">
                          <div class="linediv-c">
-                            <h3>$0</h3> <p>of $100,000</p>
+                            <h3>$0</h3> <p>of $50,000</p>
                          </div>
                     </div>
                     <div class="span4">
@@ -191,6 +192,7 @@
                     </div>
                   </div>
                 </div>
+                 <div class="row-fluid">
                 <div class="span10 offset1">
                    <!-- Bootstrap progress bar -->
                    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -199,6 +201,8 @@
                       <div class="bar bar-warning" style="width: 40%;"></div>
                    </div>
                 </div>
+                </div>
+                <div class="row-fluid">
                 <div class="span6 offset3 order">
                   <!-- Standard Bootstrap button -->
                   <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
@@ -206,6 +210,8 @@
 <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
                   <!--       <button class="btn btn-success btn-large">Preorder</button> -->
                 </div>
+                </div>
+                <div class="row-fluid">
                 <div class="span8 offset2 social">
                     <!-- AddThis Button BEGIN -->
                     <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
@@ -221,7 +227,7 @@
              </div>
            </div>
       </div>   
-
+     </div>
 
      <!-- Beyond this part the marketing copy begins -->
      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
@@ -231,7 +237,7 @@
         <div class="span5 offset1 asset">
             <div class="video-container">
           <!-- <img class="img-poloroid" src="http://2.bp.blogspot.com/_OQv489hyWgM/TGNPZ7txcjI/AAAAAAAABfg/DlfXnUCRADk/s640/Implementing+GeeCees+v1.0.jpg"> -->
-          <iframe width="480" height="270" src="//www.youtube.com/embed/nRQ-t_htskA" frameborder="0" allowfullscreen></iframe>
+        <iframe width="480" height="300" src="//www.youtube.com/embed/jbP2HPCxTO8" frameborder="0" allowfullscreen></iframe>
          </div> 
        </div>
         <div class="span5 copy">
@@ -250,7 +256,7 @@
         <div class="span5 asset">
            <div class="video-container">
           <!-- <img class="img-poloroid" src="http://placehold.it/480x300"> -->
-          <iframe width="480" height="270" src="//www.youtube.com/embed/9O0YtCCWZiU" frameborder="0" allowfullscreen></iframe>
+<iframe width="480" height="300" src="//www.youtube.com/embed/2eotjIKkbj8" frameborder="0" allowfullscreen></iframe>
          </div>
         </div>
      </div>
