updated commit to force merge

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </script>
   </head>
   <body>
-    <!-- a comment to force a commit -->
+    <!-- a comment chabge to force a commit -->
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
